--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   firebase_auth: ^4.4.0
   firebase_database: ^10.1.0
   google_fonts: ^4.0.3
+  email_validator: ^2.1.17
+  fluttertoast: ^8.2.1
+  shared_preferences: ^2.1.0
+  flutter_svg: ^0.22.0
+  fl_chart: ^0.36.1
+  provider: ^5.0.0
+  url_launcher: ^6.1.10
+  encrypt: ^5.0.1
+  web_smooth_scroll: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +73,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
+     - asset/images/
+     - asset/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
